--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Log Query Panel</title>
+  <title>Log Sorgu Paneli</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.bootstrap5.min.css" rel="stylesheet">
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+  <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.53/build/pdfmake.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pdfmake@0.1.53/build/vfs_fonts.js"></script>
   <style>
     body {
       background: linear-gradient(to right, #1e3c72, #2a5298);
       color: white;
       font-family: 'Segoe UI', sans-serif;
       padding-top: 40px;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .container {
       max-width: 1000px;
+      width: 100%;
     }
     .card {
-      background-color: #ffffff0d;
+      background-color: rgba(255, 255, 255, 0.1);
       border: none;
       border-radius: 20px;
       backdrop-filter: blur(10px);
@@ -44,16 +54,16 @@
 <body>
   <div class="container">
     <div class="card p-4">
-      <h2 class="text-center mb-4">🔍 Log Query Panel</h2>
+      <h2 class="text-center mb-4">🔍 Log Sorgu Paneli</h2>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" id="query" placeholder="Enter domain, e.g. google.com">
-        <button class="btn btn-primary" id="searchBtn">Search</button>
+        <input type="text" class="form-control" id="query" placeholder="Alan adı girin, örneğin: google.com">
+        <button class="btn btn-primary" id="searchBtn">Ara</button>
       </div>
       <div class="loading" id="loading">
         <div class="spinner-border text-light" role="status">
-          <span class="visually-hidden">Loading...</span>
+          <span class="visually-hidden">Yükleniyor...</span>
         </div>
-        <p>Fetching data babe, hang on 💖</p>
+        <p>Veri çekiliyor, lütfen bekleyin 💖</p>
       </div>
       <div class="alert alert-danger d-none" id="errorBox"></div>
       <div class="table-responsive mt-4">
@@ -81,7 +91,7 @@
       searchBtn.addEventListener('click', async () => {
         const query = queryInput.value.trim();
         if (!query) {
-          errorBox.textContent = 'Please enter a domain.';
+          errorBox.textContent = 'Lütfen bir alan adı girin.';
           errorBox.classList.remove('d-none');
           return;
         }
@@ -99,12 +109,14 @@
           tableHead.innerHTML = '';
           tableBody.innerHTML = '';
 
-          if (Array.isArray(data) && data.length > 0) {
-            const keys = Object.keys(data[0]);
-            keys.forEach(key => {
-              tableHead.innerHTML += `<th>${key}</th>`;
-            });
-            data.forEach(row => {
+          if (data.basarili && Array.isArray(data.veri) && data.veri.length > 0) {
+            const keys = ['Url', 'KullaniciAdi', 'Sifre'];
+            tableHead.innerHTML = `
+              <th>URL</th>
+              <th>Kullanıcı Adı</th>
+              <th>Şifre</th>
+            `;
+            data.veri.forEach(row => {
               let rowHtml = '<tr>';
               keys.forEach(key => {
                 rowHtml += `<td>${row[key]}</td>`;
@@ -118,14 +130,20 @@
             if (dataTable) {
               dataTable.destroy();
             }
-            dataTable = new DataTable('#resultsTable');
+
+            dataTable = new DataTable('#resultsTable', {
+              dom: 'Bfrtip',
+              buttons: [
+                'copy', 'csv', 'excel', 'pdf'
+              ]
+            });
           } else {
-            errorBox.textContent = 'No data or unsupported format.';
+            errorBox.textContent = 'Veri bulunamadı veya desteklenmeyen format.';
             errorBox.classList.remove('d-none');
           }
         } catch (error) {
           loading.style.display = 'none';
-          errorBox.textContent = 'Error fetching data.';
+          errorBox.textContent = 'Veri çekilirken bir hata oluştu.';
           errorBox.classList.remove('d-none');
         }
       });
