--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Log Sorgu Paneli</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.bootstrap5.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
   <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
@@ -131,11 +133,15 @@
               dataTable.destroy();
             }
 
+            // Initialize DataTable with pagination options 10, 30, 90 rows per page
             dataTable = new DataTable('#resultsTable', {
               dom: 'Bfrtip',
               buttons: [
                 'copy', 'csv', 'excel', 'pdf'
-              ]
+              ],
+              pageLength: 10,
+              lengthMenu: [10, 30, 90],
+              responsive: true
             });
           } else {
             errorBox.textContent = 'Veri bulunamadı veya desteklenmeyen format.';
