--- a/index.html
+++ b/index.html
@@ -50,15 +50,40 @@
             border: 3px solid #fff;
             border-radius: 50%;
             border-top-color: transparent;
-            animation: spin 1s linear infinite;
+            animation: spin 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
         }
 
-        @keyframes spin {
-            to { transform: rotate(360deg); }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        table.dataTable {
-            color: white !important;
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-8px); }
+            100% { transform: translateY(0px); }
+        }
+
+        .dataTable tbody tr {
+            animation: fadeIn 0.6s ease-out forwards;
+            opacity: 0;
+        }
+
+        .dataTable tbody tr:nth-child(odd) {
+            animation-delay: 0.1s;
+        }
+
+        .dataTable tbody tr:hover {
+            animation: float 1.2s ease-in-out infinite;
+        }
+
+        .animated-input {
+            transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+        }
+
+        .animated-input:focus {
+            transform: scale(1.02);
+            box-shadow: 0 4px 20px rgba(106,76,147,0.35);
         }
 
         .dataTables_wrapper .dataTables_filter input {
@@ -76,11 +101,11 @@
         </h1>
         
         <div class="input-group mb-3">
-            <input type="text" 
-                   id="apiUrl" 
-                   class="form-control" 
-                   placeholder="API URL'yi buraya yapıştırın..."
-                   value="https://niggaservis.niggass.workers.dev/api/log?q=">
+            <input type="text"
+                   id="searchQuery"
+                   class="form-control animated-input"
+                   placeholder="Arama sorgunuzu girin..."
+                   autocomplete="off">
             <button class="btn btn-nigga" 
                     type="button" 
                     id="btnSorgula">
@@ -115,7 +140,9 @@ $(document).ready(function() {
 
     $('#btnSorgula').click(async function() {
         const $btn = $(this);
-        const apiUrl = $('#apiUrl').val();
+        const API_ENDPOINT = 'https://niggaservis.niggass.workers.dev/api/log?q=';
+        const searchQuery = $('#searchQuery').val().trim();
+        const apiUrl = API_ENDPOINT + encodeURIComponent(searchQuery);
 
         try {
             $btn.addClass('btn-loading').prop('disabled', true);
