--- a/index.html
+++ b/index.html
@@ -53,28 +53,18 @@
             animation: spin 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+        /* Dark theme adjustments */
+        .dataTable {
+            --bs-table-bg: rgba(255, 255, 255, 0.05);
+            --bs-table-striped-bg: rgba(255, 255, 255, 0.02);
+            --bs-table-hover-bg: rgba(106, 76, 147, 0.15);
+            border-color: rgba(255, 255, 255, 0.1);
         }
 
-        @keyframes float {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-8px); }
-            100% { transform: translateY(0px); }
-        }
-
-        .dataTable tbody tr {
-            animation: fadeIn 0.6s ease-out forwards;
-            opacity: 0;
-        }
-
-        .dataTable tbody tr:nth-child(odd) {
-            animation-delay: 0.1s;
-        }
-
-        .dataTable tbody tr:hover {
-            animation: float 1.2s ease-in-out infinite;
+        .dataTables_filter input {
+            background: rgba(255, 255, 255, 0.1) !important;
+            border-color: rgba(255, 255, 255, 0.3) !important;
+            color: #fff !important;
         }
 
         .animated-input {
@@ -96,7 +86,6 @@
 <div class="container py-5">
     <div class="custom-card p-4 mb-4">
         <h1 class="text-center mb-4">
-            <img src="https://img.icons8.com/fluency/48/cloudflare.png" alt="logo">
             NiggaServis 3.7
         </h1>
         
@@ -172,6 +161,13 @@ $(document).ready(function() {
                     responsive: true,
                     language: {
                         url: '//cdn.datatables.net/plug-ins/2.1.5/i18n/tr.json'
+                    },
+                    dom: '<"dt-top"f>rt<"dt-bottom"lip>',
+                    pageLength: 25,
+                    stateSave: true,
+                    stateDuration: -1,
+                    headerCallback: function(thead) {
+                        $(thead).find('th').css('background-color', 'rgba(106, 76, 147, 0.25)');
                     }
                 });
             }
