--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="container py-5">
     <div class="custom-card p-4 mb-4">
         <h1 class="text-center mb-4">
-            NiggaServis 3.7
+            WebLog
         </h1>
         
         <div class="input-group mb-3">
@@ -163,7 +163,7 @@ $(document).ready(function() {
                         url: '//cdn.datatables.net/plug-ins/2.1.5/i18n/tr.json'
                     },
                     dom: '<"dt-top"f>rt<"dt-bottom"lip>',
-                    pageLength: 25,
+                    pageLength: 5,
                     stateSave: true,
                     stateDuration: -1,
                     headerCallback: function(thead) {
