--- a/index.html
+++ b/index.html
@@ -181,71 +181,29 @@
 <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
 <script>
 $(document).ready(function() {
-    let dataTable = null;
-
-    $('#btnSorgula').click(async function() {
-        const $btn = $(this);
-        const API_ENDPOINT = 'https://niggaservis.niggass.workers.dev/api/log?q=';
-        const searchQuery = $('#searchQuery').val().trim();
-        const apiUrl = API_ENDPOINT + encodeURIComponent(searchQuery);
-
-        try {
-            $btn.addClass('btn-loading').prop('disabled', true);
-            
-            const response = await fetch(apiUrl);
-            const { basarili, veri, servis } = await response.json();
-
-            if (basarili && veri) {
-                    // Toast bildirimini güncelle
-                    $('#responseTime').text((servis.sunucuCevapSuresi * 1000).toFixed(2) + 'ms');
-                    $('#totalRecords').text(servis.sunucuCevapSayisi.toLocaleString());
-                    new bootstrap.Toast(document.getElementById('resultToast')).show();
-                if (dataTable) {
-                    dataTable.destroy();
-                    $('#resultTable tbody').empty();
-                }
-
-                const processedData = veri.map(item => [
-                    item.Url || 'N/A',
-                    item.KullaniciAdi || 'N/A',
-                    item.Sifre || 'N/A'
-                ]);
-
-                dataTable = $('#resultTable').DataTable({
-                    data: processedData,
-                    columns: [
-                        { title: 'URL' },
-                        { title: 'Kullanıcı Adı' },
-                        { title: 'Şifre' }
-                    ],
-                    responsive: true,
-                    language: {
-                        url: '//cdn.datatables.net/plug-ins/2.1.5/i18n/tr.json'
-                    },
-                    dom: '<"dt-top"f>rt<"dt-bottom"lip>',
-                    pageLength: 10,
-                    stateSave: true,
-                    stateDuration: -1,
-                    headerCallback: function(thead) {
-                        $(thead).find('th').css('background-color', 'rgba(106, 76, 147, 0.25)');
-                    }
-                });
+    $('#resultTable').DataTable({
+        dom: '<"dt-top"fB>rt<"dt-bottom"lip>',
+        buttons: [
+            { extend: 'csv', text: 'CSV İndir' },
+            { extend: 'excel', text: 'Excel İndir' },
+            { extend: 'pdf', text: 'PDF İndir' }
+        ],
+        language: {
+            url: '//cdn.datatables.net/plug-ins/2.1.5/i18n/tr.json',
+            buttons: {
+                csv: 'CSV Olarak İndir',
+                excel: 'Excel Olarak İndir',
+                pdf: 'PDF Olarak İndir'
             }
-        } catch (error) {
-            console.error('Sorgulama hatası:', error);
-            new bootstrap.Toast(document.getElementById('resultToast')).show();
-                $('#responseTime').text('Hata!');
-                $('#totalRecords').text('0');
-                alert('Sorgulama sırasında bir hata oluştu!');
-        } finally {
-            $btn.removeClass('btn-loading').prop('disabled', false);
         }
     });
 });
 </script>
-
 </body>
 </html>
