--- a/index.html
+++ b/index.html
@@ -182,5 +182,70 @@
 <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+<script>
+$(document).ready(function() {
+    let dataTable = null;
+
+    $('#btnSorgula').click(async function() {
+        const $btn = $(this);
+        const API_ENDPOINT = 'https://niggaservis.niggass.workers.dev/api/log?q=';
+        const searchQuery = $('#searchQuery').val().trim();
+        const apiUrl = API_ENDPOINT + encodeURIComponent(searchQuery);
+
+        try {
+            $btn.addClass('btn-loading').prop('disabled', true);
+            
+            const response = await fetch(apiUrl);
+            const { basarili, veri, servis } = await response.json();
+
+            if (basarili && veri) {
+                    // Toast bildirimini güncelle
+                    $('#responseTime').text((servis.sunucuCevapSuresi * 1000).toFixed(2) + 'ms');
+                    $('#totalRecords').text(servis.sunucuCevapSayisi.toLocaleString());
+                    new bootstrap.Toast(document.getElementById('resultToast')).show();
+                if (dataTable) {
+                    dataTable.destroy();
+                    $('#resultTable tbody').empty();
+                }
+
+                const processedData = veri.map(item => [
+                    item.Url || 'N/A',
+                    item.KullaniciAdi || 'N/A',
+                    item.Sifre || 'N/A'
+                ]);
+
+                dataTable = $('#resultTable').DataTable({
+                    data: processedData,
+                    columns: [
+                        { title: 'URL' },
+                        { title: 'Kullanıcı Adı' },
+                        { title: 'Şifre' }
+                    ],
+                    responsive: true,
+                    language: {
+                        url: '//cdn.datatables.net/plug-ins/2.1.5/i18n/tr.json'
+                    },
+                    dom: '<"dt-top"f>rt<"dt-bottom"lip>',
+                    pageLength: 10,
+                    stateSave: true,
+                    stateDuration: -1,
+                    headerCallback: function(thead) {
+                        $(thead).find('th').css('background-color', 'rgba(106, 76, 147, 0.25)');
+                    }
+                });
+            }
+        } catch (error) {
+            console.error('Sorgulama hatası:', error);
+            new bootstrap.Toast(document.getElementById('resultToast')).show();
+                $('#responseTime').text('Hata!');
+                $('#totalRecords').text('0');
+                alert('Sorgulama sırasında bir hata oluştu!');
+        } finally {
+            $btn.removeClass('btn-loading').prop('disabled', false);
+        }
+    });
+});
+</script>
+
 </body>
 </html>
